Implement method-level security using @PreAuthorize